Updated config to include available and enabled paths. Added defaults

--- a/docs/downloads/ahousekeeper.yml.example
+++ b/docs/downloads/ahousekeeper.yml.example
@@ -1,1 +1,3 @@
-path: /etc/apache2/sites-enabled
+enabled-path: /etc/apache2/sites-enabled
+available-path: /etc/apache2/sites-available
+config-extension: conf # this is default
